crates/tests/libs/bindgen/data/error/delegate_unexpected_self/input.rdl

#[winrt]
mod Test {
    delegate fn Handler(&self);
}
        